# itk-vtk-viewer

./: .babelrc  .eslintrc.js  .gitignore  .gitmodules  .npmignore  .puppeteerrc.cjs  .travis.yml  CONTRIBUTING.md  Copyright.txt  README.md  atom.xml  azure-pipelines.yml  buildUI.js  generate-sw.js  index.html  index.jade  karma.conf.js  package-lock.json  package.json  sitemap.xml  tsconfig.json  webpack.config.js
.circleci/: config.yml
.github/workflows/: build-test.yml  publish.yml
api/: index.html
app/: 124.itkVtkViewer.js  124.itkVtkViewer.js.map  124.itkVtkViewerCDN.js  150.itkVtkViewer.js  150.itkVtkViewer.js.map  150.itkVtkViewerCDN.js  159.itkVtkViewer.js  159.itkVtkViewer.js.map  159.itkVtkViewerCDN.js  236.itkVtkViewer.js  236.itkVtkViewer.js.map  236.itkVtkViewerCDN.js  250.itkVtkViewer.js  250.itkVtkViewer.js.map  250.itkVtkViewerCDN.js  284.itkVtkViewer.js  284.itkVtkViewer.js.map  284.itkVtkViewerCDN.js  399.itkVtkViewer.js  399.itkVtkViewer.js.map  399.itkVtkViewerCDN.js  444.itkVtkViewer.js  444.itkVtkViewer.js.map  444.itkVtkViewerCDN.js  480.itkVtkViewer.js  480.itkVtkViewer.js.map  757.itkVtkViewer.js  757.itkVtkViewer.js.map  757.itkVtkViewerCDN.js  764.itkVtkViewer.js  764.itkVtkViewer.js.map  764.itkVtkViewerCDN.js  774.itkVtkViewer.js  774.itkVtkViewer.js.map  774.itkVtkViewerCDN.js  880.itkVtkViewerCDN.js  94.itkVtkViewer.js  94.itkVtkViewer.js.map  94.itkVtkViewerCDN.js  952.itkVtkViewer.js  (+33 more)
app/itk/: Image.js  ImageIOIndex.js  MimeToIO.js  README.md  extensionToIO.js  getFileExtension.js  itkConfig.js  loadEmscriptenModule.js  package.json  readImageArrayBuffer.js  readImageBlob.js  readImageEmscriptenFSFile.js  readImageFile.js  readImageLocalDICOMFileSeries.js  readImageLocalFile.js  writeImageArrayBuffer.js  writeImageBlob.js  writeImageEmscriptenFSFile.js  writeImageFile.js  writeImageLocalFile.js
app/itkImageIOs/: itkMetaImageIOJSBinding.js
app/itkWebWorkers/: ImageIOWorker.js
config/: index.html
css/: navy.css
doc/: config.js
doc/content/: index.html  index.jade
doc/data/: menu.yml
doc/tpl/: __en__  __sidebar__
docs/: cli.html  customizeUI.html  embeddedViewer.html  imjoy.html  index.html  shortcuts.html  viewer.html
examples/: compare-image.html  cyan-magenta-compare-image.html  test-conglomerate.html  test.html
news/: index.html
news/2016/: index.html
public/: index.html
src/: CoordDecompressor.js  DynamicModuleLoader.js  ImJoyPluginAPI.js  ItkVtkImageViewer.mcss  ItkVtkViewProxy.js  MultiscaleManager.js  PyramidManager.js  StaticModuleLoader.js  ViewerMachineOptions.js  ViewerOptions.js  ViewerStore.js  ZarrMultiscaleManager.js  ZarrPyramidManager.js  addKeyboardShortcuts.js  bloscZarrDecompress.js  convertItkImageToVtkImage.js  createViewer.js  createViewerMachine.js  dataHandler.js  dtypeToTypedArray.js  fetchBinaryContent.js  helper.js  imJoyCodecs.js  imJoyPluginAPI.js  index.d.ts  index.js  internalUtils.js  itkConfig.js  itkConfigCDN.js  itkFileReader.js  processFile.js  processFiles.js  proxyManagerConfiguration.js  serviceWorker.js  transformBounds.js  uploadFileHandler.js  userInterface.js  utils.js  viewer.js  viewerMachineOptions.js
src/Compression/: CoordsDecompressor.js  bloscZarrDecompress.js
src/Compression/blosc-zarr/: .gitignore  BloscZarr.c  BloscZarr.cxx  CMakeLists.txt
src/Compression/blosc-zarr/emscripten-build/: BloscZarr.js  BloscZarr.wasm  BloscZarr.wasm.zst
src/Compression/blosc-zarr/web-build/: BloscZarr.js  BloscZarr.umd.js  BloscZarrWasm.js  BloscZarrWasm.wasm
src/Context/: ImageActorContext.js  ImageMachineContext.js  ImagesMachineContext.js  LayerActorContext.js  LayerMachineContext.js  LayersMachineContext.js  MainMachineContext.js  ViewerContext.js  ViewerMachineContext.js  WidgetsMachineContext.js
src/IO/: Chunker.worker.js  ConglomerateMultiscaleSpatialImage.js  ConsolidatedMetadataStore.js  HttpStore.js  ImageDataFromChunks.worker.js  InMemoryMultiscaleChunkedImage.js  InMemoryMultiscaleSpatialImage.js  MultiscaleChunkedImage.js  MultiscaleManager.js  MultiscaleSpatialImage.js  ZarrMultiscaleChunkedImage.js  ZarrMultiscaleManager.js  ZarrStore.js  (+15 more)
src/IO/Checkerboard/: .gitignore  CMakeLists.txt  checkerboard.cxx  createCheckerboard.js  index.mjs
src/IO/Checkerboard/emscripten-build/: checkerboard.js  checkerboard.umd.js
src/IO/Compare/: .gitignore  CMakeLists.txt  Compare.cxx  createCompareImage.js  index.mjs  package-lock.json  package.json
src/IO/Compare/emscripten-build/: Compare.js  Compare.umd.js  Compare.umd.wasm  Compare.wasm.zst
src/IO/Downsample/: .gitignore  CMakeLists.txt  Downsample.cxx  DownsampleLabelImage.cxx  downsample.js  index.html  package-lock.json  package.json  styles.css
src/IO/Downsample/cypress/integration/: load_data_spec.js
src/IO/Downsample/emscripten-build/: Downsample.js  Downsample.umd.js  Downsample.wasm  Downsample.wasm.zst  DownsampleLabelImage.js  DownsampleLabelImage.umd.js  DownsampleLabelImage.wasm  DownsampleLabelImage.wasm.zst
src/IO/Downsample/web-build/: Downsample.js  Downsample.umd.js  DownsampleLabelImage.js  DownsampleLabelImage.umd.js  DownsampleLabelImage.wasm  DownsampleWasm.js  DownsampleWasm.wasm
src/IO/ResampleLabelImage/: .gitignore  CMakeLists.txt  ResampleLabelImage.cxx  ResampleLabelImage.js  index.mjs  package-lock.json  package.json  resampleLabelImage.js
src/IO/ResampleLabelImage/emscripten-build/: ResampleLabelImage.js  ResampleLabelImage.umd.js  ResampleLabelImage.wasm  ResampleLabelImage.wasm.zst
src/IO/ResampleLabelImage/web-build/: ResampleLabelImage.js  ResampleLabelImage.umd.js  ResampleLabelImage.wasm
src/blosc-zarr/: BloscZarr.c  CMakeLists.txt
src/blosc-zarr/web-build/: BloscZarr.js  BloscZarrWasm.js  BloscZarrWasm.wasm
test/: conglomerateTest.js  convertItkImageToVtkImageTest.js  createViewerTest.js  customElementsDefineOverride.js  downloadData.mjs  imjoyTest.js  itkConfigBrowserTest.js  multiscaleSpatialImageTest.js  pipelineTest.js  processFilesTest.js  run.sh  test-ui-rollup.config.js  testUINoPlaneSliders.js  tests.js  zarrImageBaselines.js  zarrTest.js
(+1119 files in other folders)
